# Assignment2

./: README.md
Automated Text Extraction/: pyproject.toml
Automated Text Extraction/Airflow/: ExtractPdfData.py  docker-compose.yaml  dockerfile  pyproject.toml
Automated Text Extraction/Airflow/dags/: Openai_Pipeline.py
Automated Text Extraction/ArchitectureDiagram/: ArchitectureDiagramCode.ipynb
Automated Text Extraction/Data/: DataToAwsSQL.py  gaia_to_s3.py  load.py  load_validation.py  pyproject.toml
Automated Text Extraction/Fastapi/: __init__.py  fastapi_app.py  jwtauth.py  main.py
Automated Text Extraction/Streamlit/: Main.py  app.py  application.py  generate_summary.py
Automated Text Extraction/assignment2-codelab/: codelab.json  index.html
Streamlit/: app.py
