[tool.poetry]
name = "gaia-pdf-uploader"
version = "0.1.0"
description = "Script to upload GAIA dataset PDF files to S3"
authors = ["Saurabh, Shreya"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<=3.12.7"
boto3 = "^1.35.30"
datasets = "^3.0.1"

docutils = "<0.21"

fastapi = {extras = ["all"], version = "^0.115.0"}
uvicorn = "^0.31.0"
passlib = "^1.7.4"
python-jose = "^3.3.0"
pyjwt = "^2.9.0"
sqlalchemy = "^2.0.35"
pymysql = "^1.1.1"
bcrypt = "^4.2.0"
mysql-connector-python = "^9.0.0"
python-multipart = "^0.0.12"
python-dotenv = "^1.0.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
